<resources>
    <string name="app_name">stadium</string>
    <string name="needInternet">Internet is required for the application to work.</string>
    <string name="please_internet">Please turn on the internet</string>
    <string name="startagain">Start Again</string>
    <string name="excellent">Excellent</string>
    <string name="result">Your result</string>
    <string name="background">Background</string>
    <string name="footbal">Footbal Image</string>
    <string name="result_Button">Your Score</string>
    <string name="beast_stadium_title">The 10 best stadiums in the world</string>
    <string name="stadium_image">stadium_image</string>
    <string name="beast_stadium_information">information</string>
    <string name="back">Back</string>
</resources>