<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/actyvityImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linear_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beast_stadium_title"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="24dp" />

        <TextView
            android:id="@+id/information_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beast_stadium_information"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="24dp"
            android:visibility="gone"/>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/beast_stadium_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>